implemented gpsl modelchecker