@@ -23,24 +23,15 @@ repositories {
 }
 
 java {
-    modularity.inferModulePath = true
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(23))
     }
 }
 
-compileJava {
-    options.compilerArgs.add('--enable-preview')
-}
-
-compileTestJava {
-    options.compilerArgs.add('--enable-preview')
-}
-
 dependencies {
     antlr 'org.antlr:antlr4:4.13.2'
     implementation ('org.obpcdl:obp3-runtime:1.0.+')
-    implementation ('org.obpcdl:reader-infra:1.0.0')
+    implementation ('org.obpcdl:reader-infra:1.0.+')
     implementation project(':gpsl-ltl3ba')
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -49,7 +40,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs += '--enable-preview'
 }
 
 generateGrammarSource {
