@@ -23,11 +23,19 @@ repositories {
     }
 }
 
+java {
+    modularity.inferModulePath = true
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(23))
+    }
+}
+
 dependencies {
     implementation project(':gpsl-core')
+    implementation ('org.obpcdl:obp3-runtime:1.0.+')
     implementation 'org.obpcdl:reader-infra:1.0.0'
-    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.21.1'
-    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.21.1'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.24.0'
     implementation 'org.slf4j:slf4j-simple:2.0.13'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
@@ -35,26 +43,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(23))
-    }
-}
-
 application {
     mainClass = 'gpsl.lsp.Main'
-}
-
-compileJava {
-    options.compilerArgs.add('--enable-preview')
-}
-
-compileTestJava {
-    options.compilerArgs.add('--enable-preview')
 }
 
 tasks.test {
     useJUnitPlatform()
 }
-
-// Use application distribution (Gradle 9 compatible)
