@@ -7,18 +7,9 @@ repositories {
 }
 
 java {
-    modularity.inferModulePath = true
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(23))
     }
-}
-
-compileJava {
-    options.compilerArgs.add('--enable-preview')
-}
-
-compileTestJava {
-    options.compilerArgs.add('--enable-preview')
 }
 
 dependencies {
@@ -29,7 +20,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs += '--enable-preview'
 }
 
 sourceSets {
